deploy/kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mcm
  labels:
    app.kubernetes.io/part-of: mcm
