deploy/kustomize/base/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels: { app.kubernetes.io/name: keycloak }
  template:
    metadata:
      labels:
        app.kubernetes.io/name: keycloak
        app.kubernetes.io/component: idp
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:24.0.5  # override per env
          args: ["start"]  # in dev overlay you may use: ["start-dev"]
          ports:
            - { name: http, containerPort: 8080 }
