deploy/kustomize/base/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  selector: { app.kubernetes.io/name: keycloak }
  ports:
    - { name: http, port: 8080, targetPort: 8080 }
