deploy/kustomize/base/postgres-service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-hl
spec:
  clusterIP: None
  selector: { app.kubernetes.io/name: postgres }
  ports: [{ name: pg, port: 5432, targetPort: 5432 }]
