deploy/kustomize/base/mcm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules: []   # patched per env
